--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <header>
         <div class="header-content">
 	<!-- Add your profile picture here -->
-	<img src="1.jpeg" alt="Your Profile Picture" class="profile-picture">
+	<img src="IMG-20231030-WA0038.jpg" alt="Your Profile Picture" class="profile-picture">
 	<h1><u>VIGNESH V</u></h1>
         <h3>Passionate on Programming</h3>
 	</div>
